log

Thu 14 Mar 2024 08:21:09 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
7266127
Thu 14 Mar 2024 08:21:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
ab35978
Thu 14 Mar 2024 08:25:05 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
3d7c84a
Thu 14 Mar 2024 08:26:46 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
e924015
Thu 14 Mar 2024 08:30:16 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 10/70
54bf301
Thu 14 Mar 2024 08:33:44 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:12: error: ‘temp’ may be used uninitialized [-Werror=maybe-uninitialized]
   33 |     arr[i] = temp;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
776d139
Thu 14 Mar 2024 08:34:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
07d5d6f
Thu 14 Mar 2024 08:34:45 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
611817d
